--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "connect": "^3.7.0",
     "rxjs": "~6.5.5",
+    "serve-static": "^1.14.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
